--- a/html/src/Matilti/CoreBundle/Resources/views/Default/index.html.twig
+++ b/html/src/Matilti/CoreBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,8 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-Hello World!
+ {% include '::base/wellcome.html.twig' %}
+ {% include '::base/premios.html.twig' %}
+ {% include '::base/funciones.html.twig' %}
+ {% include '::base/equipo.html.twig' %}
+ {% include '::base/servicios.html.twig' %}
 {% endblock %}
