template actuallizado por secciones

--- a/html/app/Resources/views/base/equipo.html.twig
+++ b/html/app/Resources/views/base/equipo.html.twig
@@ -6,15 +6,14 @@
 			<div class="line tem">
 			</div>
 			<p class="et">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
-				consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt 
-				ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+						consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt 
+						ut labore et dolore magnam aliquam quaerat voluptatem.</p>
 			<div class="team-grids">
 				<div class="col-md-4 team-grid">
 					<img src="images/5.png" alt=" " class="img-responsive" />
 					<h4>Mariana Moisa <span>Antropologa Feminista</span></h4>
-					<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
-						consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt 
-						ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+					<p>Antropología feminista y diseñadora grafica, con 8 años de experiencia en el área de comunicaciones institucionales. 
+						   Experiencias en docencia con enfoque de genero, campañas y estrategias de comunicación social.</p>
 					<div class="team-grid-hov">
 						<ul>
 							<li><a href="#" class="twitter"></a></li>
