--- a/html/app/Resources/views/base/funciones.html.twig
+++ b/html/app/Resources/views/base/funciones.html.twig
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="fig-text1">
 				<div class="col-md-6 fig-text1-right">
-					<h3>Opciones basicas</h3>
+					<h3>Funciones basicas</h3>
 					<div class="line glob">
 					</div>
 					<ul>
@@ -18,7 +18,7 @@
 					</ul>
 				</div>
 				<div class="col-md-6 fig-text1-right">
-					<h3>Opciones avanzadas</h3>
+					<h3>Funciones avanzadas</h3>
 					<div class="line glob">
 					</div>
 					<ul>
