--- a/html/app/Resources/views/base/servicios.html.twig
+++ b/html/app/Resources/views/base/servicios.html.twig
@@ -2,33 +2,37 @@
 <!-- services -->
 	<div class="services" id="services">
 		<div class="container">
-			<h3>Our Services</h3>
+			<h3>Herramientas que utiliza Matilti Feminista</h3>
 			<div class="line ser">
 			</div>
-			<p class="et">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
-				consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt 
-				ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+			<p class="et">Matilti esta construida totalmente con software libre, desde los editores de texto hasta las herramientas de software.</p>
 			<div class="services-grids">
-				<div class="col-md-4 services-grid">
+				<div class="col-md-3 services-grid">
 					<div class="para">
 						<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-						<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
-							consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt 
-							ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+						<p>Debian OS.</p>
 					</div>
 				</div>
-				<div class="col-md-4 services-grid">
+				<div class="col-md-3 services-grid">
 					<div class="para">
 						<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
-						<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
+						<p>Gestor de bases de datos PostgreSQL<br/>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
 							consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt 
 							ut labore et dolore magnam aliquam quaerat voluptatem.</p>
 					</div>
 				</div>
-				<div class="col-md-4 services-grid">
+				<div class="col-md-3 services-grid">
 					<div class="para">
 						<span class="glyphicon glyphicon-leaf" aria-hidden="true"></span>
-						<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
+						<p>Gammu <br/>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
+							consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt 
+							ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+					</div>
+				</div>
+				<div class="col-md-3 services-grid">
+					<div class="para">
+						<span class="glyphicon glyphicon-leaf" aria-hidden="true"></span>
+						<p>symfony 2 framework php5<br/>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
 							consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt 
 							ut labore et dolore magnam aliquam quaerat voluptatem.</p>
 					</div>
