--- a/html/app/Resources/views/base/servicios.html.twig
+++ b/html/app/Resources/views/base/servicios.html.twig
@@ -5,7 +5,13 @@
 			<h3>Herramientas que utiliza Matilti Feminista</h3>
 			<div class="line ser">
 			</div>
-			<p class="et">Matilti esta construida totalmente con software libre, desde los editores de texto hasta las herramientas de software.</p>
+			<p class="et">Matilti esta construida totalmente con software libre, desde los editores de texto hasta las herramientas de software más complejas.</p>
+			<p class="et">Todo esta publicado bajo <a href="http://creativecommons.org/licenses/by-sa/3.0/es/deed.es" rel="license" target="_new">licencia Creative Commons Atribución-CompartirIgual 3.0 Unported</a> <img src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" style="border-width:0" alt="Licencia Creative Commons"> y puede 
+			descargar el codigo fuente desde 
+			 <a href="https://github.com/wilxsv/acrasame-zp/archive/master.zip" target="_new">
+			  <img class="img-responsive" alt=" " src="images/GitHub_Logo.png" height="27" width="100" >
+			  <img class="img-responsive" alt=" " src="images/Octocat.png" height="59" width="50" >
+			 </a></p>
 			<div class="services-grids">
 				<div class="col-md-3 services-grid">
 					<div class="para">
